Adding more excercies for java problem solving